- fix build with enable preview on tests - remove type from matrices (going forward towards oop refactory on vectors)